--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "archiver": "^7.0.1",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
